<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.studybuddy.firebase.AddDetailsActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/classNameTitleTxt"
            android:layout_margin="20dp"
            android:textSize="30dp"
            android:text="@string/hello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_margin="-20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="3"
            android:hint="@string/help_with"
            android:id="@+id/description"/>
    </LinearLayout>


    <Button
        android:id="@+id/saveBtn"
        android:layout_alignParentBottom="true"
        android:text="@string/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



</RelativeLayout>
